First version complete

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
             height="200">
         </div>
         <div class="col-lg-6">
-          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Responsive left-aligned hero with image</h1>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive
-            prebuilt components, and powerful JavaScript plugins.</p>
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Meet new Dog friends!</h1>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+            <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">
+              <img src="./images/apple.svg" alt="Download Apple Store">
+              Download
+            </button>
+            <button type="button" class="btn btn-outline-light btn-lg px-4">
+              <img src="./images/google_play.svg" alt="Download Button Play Store">
+              Download
+            </button>
           </div>
         </div>
       </div>
@@ -42,19 +44,17 @@
   <!-- Features -->
   <section id="features">
     <div class="container px-4 py-5" id="hanging-icons">
-      <h2 class="pb-2 border-bottom">Hanging icons</h2>
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="col d-flex align-items-start">
           <div
             class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <svg class="bi" width="1em" height="1em">
-              <use xlink:href="#toggles2"></use>
-            </svg>
+            <img src="./images/checkmark.svg" alt="checkmark">
           </div>
           <div>
-            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-              probably just keep going until we run out of words.</p>
+            <h3 class="fs-2 text-body-emphasis">Easy to use</h3>
+            <p>So easy to use, even your dog could do it. This remarkable tool is designed with such simplicity and
+              intuitiveness that it transcends the barriers of complexity. Its user-friendliness is so remarkably
+              accessible that it transcends the limitations of human interaction alone.</p>
             <a href="#" class="btn btn-primary">
               Primary button
             </a>
@@ -63,14 +63,13 @@
         <div class="col d-flex align-items-start">
           <div
             class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <svg class="bi" width="1em" height="1em">
-              <use xlink:href="#cpu-fill"></use>
-            </svg>
+            <img src="./images/hat.svg" alt="hat">
           </div>
           <div>
-            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-              probably just keep going until we run out of words.</p>
+            <h3 class="fs-2 text-body-emphasis">Elite Clientele</h3>
+            <p>Within our expansive collection, we proudly boast an unparalleled array of canines, encompassing an
+              extraordinary assortment of breeds and personalities. Our diverse selection comprises an extensive
+              gathering of remarkable dogs, each exuding their unique charm and distinct qualities. </p>
             <a href="#" class="btn btn-primary">
               Primary button
             </a>
@@ -79,14 +78,14 @@
         <div class="col d-flex align-items-start">
           <div
             class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <svg class="bi" width="1em" height="1em">
-              <use xlink:href="#tools"></use>
-            </svg>
+            <img src="./images/heart.svg" alt="heart icon">
           </div>
           <div>
-            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-              probably just keep going until we run out of words.</p>
+            <h3 class="fs-2 text-body-emphasis">Guaranteed to work</h3>
+            <p>Find the love of your dog's life or your money back. Discover the soulmate your furry companion has been
+              longing for, or rest assured knowing that your investment will be fully reimbursed. Our unparalleled
+              service guarantees to connect your dog with their perfect match, offering an extraordinary opportunity to
+              find the love of their life. </p>
             <a href="#" class="btn btn-primary">
               Primary button
             </a>
@@ -99,11 +98,28 @@
   <section id="testimonial">
     <div class="p-5 text-center bg-body-tertiary">
       <div class="container py-5">
-        <h1 class="text-body-emphasis">Full-width jumbotron</h1>
+        <h1 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on
+          TinDog. Woof."</h1>
+        <img class="profile-img mt-5" src="./images/dog.jpeg" alt="dog image">
         <p class="col-lg-8 mx-auto lead">
-          This takes the basic jumbotron above and makes its background edge-to-edge with a <code>.container</code>
-          inside to align content. Similar to above, it's been recreated with built-in grid and utility classes.
+          Rocky, San Francisco
         </p>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-sm-12">
+          <img src="./images/amazon.png" alt="amazon" height="30">
+        </div>
+        <div class="col-lg-3 col-sm-12">
+          <img src="./images/disney.png" alt="disney" height="30">
+        </div>
+        <div class="col-lg-3 col-sm-12">
+          <img src="./images/tinder.png" alt="google" height="30">
+        </div>
+        <div class="col-lg-3 col-sm-12">
+          <img src="./images/google.png" alt="tinder" height="30">
+        </div>
       </div>
     </div>
   </section>
@@ -113,30 +129,12 @@
 
     <div class="container py-3">
       <header>
-        <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img">
-              <title>Bootstrap</title>
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
-                fill="currentColor"></path>
-            </svg>
-            <span class="fs-4">Pricing example</span>
-          </a>
 
-          <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Features</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Enterprise</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Support</a>
-            <a class="py-2 link-body-emphasis text-decoration-none" href="#">Pricing</a>
-          </nav>
-        </div>
 
         <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-          <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
-          <p class="fs-5 text-body-secondary">Quickly build an effective pricing table for your potential customers with
-            this Bootstrap example. It’s built with default Bootstrap components and utilities with little
-            customization.</p>
+          <h1 class="display-4 fw-normal text-body-emphasis">A Plan for Every Dog's Needs</h1>
+          <p class="fs-5 text-body-secondary">
+            Simple and affordable price plans for you and your dog.</p>
         </div>
       </header>
 
@@ -145,15 +143,15 @@
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Free</h4>
+                <h4 class="my-0 fw-normal">Chihuahua</h4>
               </div>
               <div class="card-body">
                 <h1 class="card-title pricing-card-title">$0<small class="text-body-secondary fw-light">/mo</small></h1>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>10 users included</li>
-                  <li>2 GB of storage</li>
-                  <li>Email support</li>
-                  <li>Help center access</li>
+                  <li>5 Matches Per Day</li>
+                  <li>10 Messages Per Day</li>
+                  <li>Unlimited App Usage</li>
+                  <li>Email Support</li>
                 </ul>
                 <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
               </div>
@@ -162,16 +160,16 @@
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Pro</h4>
+                <h4 class="my-0 fw-normal">Labrador</h4>
               </div>
               <div class="card-body">
                 <h1 class="card-title pricing-card-title">$15<small class="text-body-secondary fw-light">/mo</small>
                 </h1>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>20 users included</li>
-                  <li>10 GB of storage</li>
-                  <li>Priority email support</li>
-                  <li>Help center access</li>
+                  <li>Unlimited Matches</li>
+                  <li>Unlimited Messages</li>
+                  <li>Unlimited App Usage</li>
+                  <li>Email Support</li>
                 </ul>
                 <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
               </div>
@@ -180,16 +178,16 @@
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm border-primary">
               <div class="card-header py-3 text-bg-primary border-primary">
-                <h4 class="my-0 fw-normal">Enterprise</h4>
+                <h4 class="my-0 fw-normal">Mastiff</h4>
               </div>
               <div class="card-body">
                 <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small>
                 </h1>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>30 users included</li>
-                  <li>15 GB of storage</li>
-                  <li>Phone and email support</li>
-                  <li>Help center access</li>
+                  <li>Priority Listing</li>
+                  <li>Unlimited Matches & Messages</li>
+                  <li>Unlimited App Usage</li>
+                  <li>Phone and Email Support</li>
                 </ul>
                 <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
               </div>
@@ -204,43 +202,46 @@
 
   <!-- Footer -->
   <section id="footer">
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
-      <div class="row">
-        <div class="col-12 col-md">
-          <img class="mb-2" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="24" height="19">
-          <small class="d-block mb-3 text-body-secondary">© DogTinder</small>
+    <div class="container">
+
+      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+          <div class="col-12 col-md">
+            <img class="mb-2" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="24" height="19">
+            <small class="d-block mb-3 text-body-secondary">© DogTinder 2023</small>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Features</h5>
+            <ul class="list-unstyled text-small">
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            <ul class="list-unstyled text-small">
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>About</h5>
+            <ul class="list-unstyled text-small">
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="col-6 col-md">
-          <h5>Features</h5>
-          <ul class="list-unstyled text-small">
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Resources</h5>
-          <ul class="list-unstyled text-small">
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>About</h5>
-          <ul class="list-unstyled text-small">
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </section>
 </body>
 
