--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
       <main>
         <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3">
+            <div class="card mb-4 rounded-3 shadow-sm ">
+              <div class="card-header py-3 ">
                 <h4 class="my-0 fw-normal">Chihuahua</h4>
               </div>
               <div class="card-body">
@@ -145,7 +145,7 @@
                   <li>Unlimited App Usage</li>
                   <li>Email Support</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+                <button type="button" class="w-100 btn btn-lg btn-outline-dark">Sign up for free</button>
               </div>
             </div>
           </div>
@@ -163,13 +163,13 @@
                   <li>Unlimited App Usage</li>
                   <li>Email Support</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+                <button type="button" class="w-100 btn btn-lg btn-dark">Get started</button>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm border-primary">
-              <div class="card-header py-3 text-bg-primary border-primary">
+            <div class="card mb-4 rounded-3 shadow-sm border-secondary">
+              <div class="card-header py-3 text-bg-dark">
                 <h4 class="my-0 fw-normal">Mastiff</h4>
               </div>
               <div class="card-body">
@@ -181,7 +181,7 @@
                   <li>Unlimited App Usage</li>
                   <li>Phone and Email Support</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+                <button type="button" class="w-100 btn btn-lg btn-dark">Contact us</button>
               </div>
             </div>
           </div>
