--- a/index.html
+++ b/index.html
@@ -193,41 +193,41 @@
   </section>
 
   <!-- Footer -->
-  <section id="footer">
+  <section id="footer" class="gradient-background">
     <div class="container">
 
-      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+      <footer class="pt-4 pt-md-5">
         <div class="row">
           <div class="col-12 col-md">
-            <small class="d-block mb-3 text-body-secondary">© DogTinder 2023</small>
+            <small class="d-block mb-3 text-body-dark">© DogTinder 2023</small>
           </div>
           <div class="col-6 col-md">
             <h5>Features</h5>
             <ul class="list-unstyled text-small">
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Cool stuff</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Random feature</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Team feature</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Stuff for developers</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Another one</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Last time</a></li>
             </ul>
           </div>
           <div class="col-6 col-md">
             <h5>Resources</h5>
             <ul class="list-unstyled text-small">
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Resource</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Resource name</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Another resource</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Final resource</a></li>
             </ul>
           </div>
           <div class="col-6 col-md">
             <h5>About</h5>
             <ul class="list-unstyled text-small">
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
-              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Team</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Locations</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Privacy</a></li>
+              <li class="mb-1"><a class="link-dark text-decoration-none" href="#">Terms</a></li>
             </ul>
           </div>
         </div>
